# daily-health-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  health_agent_plan.md  health_agent_plan_tasks.md  health_agent_plan_terraform_gcp.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_meal_records.py  0003_line_conversation_states.py  0004_body_metrics.py
app/: __init__.py
app/batch/: __init__.py  run_daily_job.py  run_meal_reminder_job.py  run_monthly_job.py  run_weekly_job.py
app/clients/: drive_client.py  fitbit_client.py  google_health_client.py  line_client.py  llm_base.py  llm_claude.py  llm_factory.py  llm_openai.py
app/config/: logging.py  settings.py
app/db/: models.py  session.py
app/repositories/: advice_repository.py  drive_index_repository.py  line_state_repository.py  meal_repository.py  metrics_repository.py
app/schemas/: advice_result.py  health_features.py  meal_estimate.py  report_schema.py
app/services/: feature_builder.py  health_chat_service.py  history_bootstrap_service.py  line_webhook_service.py  meal_image_service.py  meal_logging_service.py  meal_reminder_service.py  meal_time_service.py  notification_service.py  report_service.py  rule_engine.py  trend_analyzer.py
app/web/: line_webhook.py
infra/sql/: 001_init.sql
scripts/: get_drive_oauth_tokens.py  get_fitbit_oauth_tokens.py  get_google_health_oauth_tokens.py  update_gcp_secrets.sh
tests/: conftest.py
tests/clients/: test_drive_client.py  test_fitbit_client.py  test_google_health_client.py  test_llm_claude.py  test_llm_provider_schema.py
(+29 files in other folders)
