[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-health-agent"
version = "0.1.0"
description = "Daily health analysis batch for Fitbit, Google Drive, LINE, and LLM providers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "anthropic>=0.49.0,<1.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "google-api-python-client>=2.164.0,<3.0.0",
  "google-auth>=2.38.0,<3.0.0",
  "google-cloud-secret-manager>=2.23.1,<3.0.0",
  "httpx>=0.28.1,<1.0.0",
  "openai>=1.66.3,<2.0.0",
  "psycopg[binary]>=3.2.6,<4.0.0",
  "pydantic>=2.10.6,<3.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "python-dateutil>=2.9.0.post0,<3.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0,<2.0.0",
  "pytest>=8.3.5,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "ruff>=0.11.0,<0.12.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
plugins = []

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
